Fixed styling of input and buttons on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,6 @@ input:focus {
     font-size: 1.6rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     vertical-align: middle;
-    line-height: 48px;
 }
 
 #reset-button:hover {
@@ -390,6 +389,17 @@ input::placeholder {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
+    #reset-button {
+        width: 32px;
+        height: 32px;
+        border-radius: 6px;
+        margin: 8px 20px 8px 0;
+        font-size: 1.5rem;
+        padding: 0;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        line-height: 1;
+    }
+
     #color-container {
         display: flex;
         flex-wrap: wrap;
@@ -512,6 +522,16 @@ input::placeholder {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
+    #reset-button {
+        width: 38px;
+        height: 38px;
+        border-radius: 6px;
+        margin: 8px 20px 8px 0;
+        font-size: 1.6rem;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        line-height: 1;
+    }
+
     #color-container {
         display: flex;
         flex-direction: column;
@@ -558,7 +578,7 @@ input::placeholder {
         padding: 5px;
         margin: 0;
         margin-right: 5px;
-        width: 200px;
+        width: 150px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
@@ -571,7 +591,7 @@ input::placeholder {
         padding: 5px;
         margin: 0;
         margin-right: 10px;
-        width: 100px;
+        width: 90px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
@@ -624,6 +644,16 @@ input::placeholder {
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
+    #reset-button {
+        width: 38px;
+        height: 38px;
+        padding: 0;
+        border-radius: 6px;
+        margin: 8px 20px 8px 0;
+        font-size: 1rem;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+
     #color-container {
         display: flex;
         flex-direction: column;
@@ -670,7 +700,7 @@ input::placeholder {
         padding: 5px;
         margin: 0;
         margin-right: 5px;
-        width: 55%;
+        width: 50%;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
@@ -683,7 +713,7 @@ input::placeholder {
         padding: 5px;
         margin: 0;
         margin-right: 10px;
-        width: 25%;
+        width: 20%;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
